--- a/CSS/ex017/fonte01.html
+++ b/CSS/ex017/fonte01.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fontes</title>
-    <style>
-        body {
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-    </style>
+   <style>
+
+    body {
+        font-family: sans-serif;
+        font-size: 6px ;
+    }
+   </style>
+
 </head>
 <body>
     <h1>Trabalhando com fontes</h1>
