--- a/CSS/ex017/fonte01.html
+++ b/CSS/ex017/fonte01.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fontes</title>
+    <title>Fonte</title>
    <style>
 
     body {
         font-family: sans-serif;
-        font-size: 6px ;
+        font-size: 16px ;
     }
    </style>
 
 </head>
 <body>
-    <h1>Trabalhando com fontes</h1>
+    <h1>Trabalhando com fonte</h1>
+
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, autem mollitia. Illum quisquam, mollitia sapiente natus provident perferendis impedit! Illum dolorem totam necessitatibus assumenda consectetur, molestias eveniet nostrum ducimus ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis placeat soluta explicabo dolores cumque veritatis quisquam quaerat distinctio eius! Ratione iste porro quas accusantium accusamus modi provident libero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ipsam nisi perspiciatis soluta ratione aut neque rem qui reiciendis sit, porro maxime eligendi voluptatem beatae sint repellendus ea hic perferendis.</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum ad fuga neque porro. Odio culpa est maiores vero, consequuntur beatae dolor esse, quaerat dolore cumque at non in, facilis architecto.</p>
     <h2>Subtítulo de fontes</h2>
