--- a/CSS/ex013/ex013.html
+++ b/CSS/ex013/ex013.html
@@ -33,9 +33,9 @@
 
     <!-- Não utilize o  "bgcolor"! Ele pode funcionar ainda mas foi trocado por outra função.-->
 
-    <!-- A tag <font> também funciona mas já´foi trocada, também, portanto não a utilize.-->
+    <!-- A tag <font> também funciona mas já foi trocada, também, portanto não a utilize.-->
 
-    <!-- Sempre que uma tag ou algo do tipo ficar vermelha após ser digitada, é porquê ela está morta e já foi substituída por outra. -->
+    <!-- Sempre que uma tag ou algo do tipo ficar vermelha após ser digitada, é porque ela está morta e já foi substituída por outra. -->
 
     <!-- Para alterar a cor de fundo no lugar  do bgcolor, utilize o style="background-color". -->
 
