--- a/CSS/ex021/caixa01.html
+++ b/CSS/ex021/caixa01.html
@@ -3,7 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo Caixas - Box-level</title>
+    <title>Modelo de Caixas - Box-level</title>
+    <style>
+
+        h1 {
+            background-color: lightgray;
+            height: 300px;
+            width: 300px;  
+            border-color: chartreuse;
+            border-style: solid;
+            border-width: 25px;
+
+            padding-left: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-right: 10px;
+            
+        }
+
+        a {
+            border-width: 10px;
+            border-style: dotted;
+            border-width: 10px;
+
+            padding-left: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-right: 10px;
+
+        }
+
+    </style>
 </head>
 <body>
     <h1>Exemplo de caixa Box-level</h1>
@@ -38,6 +68,8 @@
         Padding-bottom: padding em baixo
         Padding-left: padding na esquerda
     -->
+
+    <!--O body contempla apenas as regiões onde há conteúdo.-->
 
 </body>
 </html>
