--- a/CSS/ex021/caixa01.html
+++ b/CSS/ex021/caixa01.html
@@ -71,5 +71,23 @@
 
     <!--O body contempla apenas as regiões onde há conteúdo.-->
 
+    <!--Modelo de Caixas na prática (Pt.2)-->
+
+    <!--
+
+        margin-top: em cima
+        margin-right: direita
+        margin-bottom: em baixo
+        margin-left: esquerda
+    -->
+
+    <!--A margem possui uma margem externa, com ela é possível impedir que uma margem encoste na outra. -->
+
+    <!--Não procure centralizar algo com o margin-top,right,bottom e left. Ao invés disso, utilize "margin: "auto"; essa sim centraliza de verdade!-->
+
+    <!--Se for para centralizar apenas textos, utilize o "text-align: center".-->
+
+    <!--Parei em 7:13 -->
+
 </body>
 </html>
