--- a/CSS/ex021/caixa01.html
+++ b/CSS/ex021/caixa01.html
@@ -7,7 +7,7 @@
     <style>
 
         h1 {
-            display: inline
+            display: inline;
 
             background-color: lightgray;
             height: 300px;
@@ -47,7 +47,7 @@
             outline-color: blue;
             outline-style: dotted;
             */
-            outline: 10px dotted blue;
+            outline: 10px dotted blue; 
         }
 
         a {
@@ -73,7 +73,7 @@
 
     <!--O user agent stylesheet (folha de estilos de agente de usuário) são edições criadas pelo navegador.-->
 
-    <!--display: block; é um elemento box-level. Isso é padrão nos navegadores ma pode ser alterado.-->
+    <!--display: block; é um elemento box-level. Isso é padrão nos navegadores mas pode ser alterado.-->
 
     <!--A margem 21,440X21,440 também é gerada automaticamente por todos os navegadores.-->
 
@@ -117,14 +117,13 @@
 
     <!--Se for para centralizar apenas textos, utilize o "text-align: center".-->
 
-    <!--Parei em 7:13 -->
 
     <!---------------------------------------------------------->
 
     <!--
                     OUTLINE
 
-        Fica entre a borda e o margem.
+        Fica entre a borda e a margem.
 
         Não é possível ver o OUTLINE no DevTools mas é possível encontrá-lo no Style do DevTools.
 
@@ -195,6 +194,14 @@
 
             block = box-level
             inline = inline-level
+        -->
+
+        <!--
+            margin: 10px 10px 10px 10px;
+            padding: 10px 10px 10px 10px;
+
+            border: solid 25px chartreuse;
+            outline: dotted 10px blue;
         -->
 
 
