--- a/Testes/MÓDULO 1/6-Links/links.html
+++ b/Testes/MÓDULO 1/6-Links/links.html
@@ -11,6 +11,14 @@
     <h2>Links Externos</h2>
 
     <a href="*" target="_blank" rel="external">Este link irá abrir em outra aba!</a>
+    <hr>
+    <h1>Links Internos</h1>
+
+    <p>Para voltar para o link 2, <a href="links2.html" target="_blank" rel="prev">clique aqui.</a></p>
+
+
+
+
 
 </body>
 </html>
