--- a/Testes/MÓDULO 2/2_degradê_com_CSS/degrade_com_css.html
+++ b/Testes/MÓDULO 2/2_degradê_com_CSS/degrade_com_css.html
@@ -16,6 +16,15 @@
         <h1>Degradê com CSS</h1>
         <hr>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum culpa architecto debitis, cum velit distinctio fugit autem blanditiis, sunt nihil ex obcaecati inventore beatae rem? Odio a similique laudantium iste.</p>
+        <main>
+            <h2>Título 2</h2>
+            <p id="dor">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex autem sint qui officia voluptatibus necessitatibus nemo dolore magnam dolor nihil?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nihil provident enim totam consequuntur iste! Perferendis explicabo ipsam repellendus aliquam.</p>
+            <h3>Título 3</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem repellat ducimus modi perferendis. Laborum repellat velit nam suscipit rem ad alias quasi ipsam dolores expedita dolor, obcaecati ut vitae nostrum mollitia vero assumenda fugiat pariatur neque odio repudiandae excepturi fuga.</p>
+            <h4>Título 4</h4>
+            <p id="z">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi itaque aspernatur, quam molestias labore accusamus ducimus nesciunt natus sint consequatur explicabo corporis nihil mollitia a dolorum eaque! Exercitationem, officia. Accusantium.</p>
+        </main>
     </code>
     
     <!--
