--- a/CSS/ex018/fontes01.html
+++ b/CSS/ex018/fontes01.html
@@ -11,7 +11,7 @@
 
         body {
 
-            font-family: "Work Sans", Arial,Verdana, sans-serif;
+            font-family: "Work Sans",fantasy;
             font-size: 16px;
             color: black;
         }
