--- a/Testes/MÓDULO 2/4_id - class - divs - pseudo_elementos/class/class.html
+++ b/Testes/MÓDULO 2/4_id - class - divs - pseudo_elementos/class/class.html
@@ -29,5 +29,28 @@
     <p id="pi">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio, exercitationem.</p>
 
     <p id="go" class="vai">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, deserunt.</p>
+
+
+    <!--
+        NOTAS SOBRE O ID:
+        O mesmo ID é utilizável na mesma tag, mas é impossível utilizá-la em duas ao mesmo tempo.
+
+        Exemplo:
+
+        O ID funciona em todas as tags <p></p>;
+        mas não funciona na tag <p></p> e na tag <h1></h1> ao mesmo tempo.
+        ------------------------------------------------------------------
+        NOTAS SOBRE A CLASS:
+
+        A mesma class pode ser utilizada em quantas tags forem necessárias.
+
+        A mesma usada na <p></p> pode ser utilizada na <h1></h1>.
+
+        É possível utilizar duas class na mesma tag.
+
+        É possível utilizar uma class e um ID na mesma tag.
+
+    -->
+
 </body>
 </html>
