--- a/Exercícios/9navegacao/amarelo.html
+++ b/Exercícios/9navegacao/amarelo.html
@@ -18,7 +18,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed iure sit soluta voluptatibus illo quam explicabo, quisquam tempore neque, consequatur vitae molestias corrupti numquam optio corporis quod maxime, aliquam quia!</p>
 
-    <li><p><a href="cinza.html" target="_blank" rel="noopener noreferrer">Volte para a Cinza</a>/p></li>
+    <li><p><a href="cinza.html" target="_blank" rel="noopener noreferrer">Volte para a Cinza</a></p></li>
 
 
 </body>
