--- a/Exercícios/9navegacao/cinza.html
+++ b/Exercícios/9navegacao/cinza.html
@@ -21,10 +21,11 @@
    
     <li>
             <a href="verde.html">Acesse a página verde.</a>
+            
     </li>
 
     <li>
-        <a href="amarelo.html">Acesse a página amarela.</a>
+        <a href="amarelo.html" target="_blank">Acesse a página amarela.</a>
     </li>
 </body>
 </html>
