--- a/Exercícios/10projeto/android.html
+++ b/Exercícios/10projeto/android.html
@@ -37,7 +37,12 @@
             </p>
 
             
+            <picture>
+            <source media="(max-width: 454px)" srcset="imagens/dan-droids-pq.png">
+
             <img src="imagens/dan-droids.png" alt="Dan-droids">
+            </picture>
+
 
             <p>
                 Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>
@@ -52,10 +57,11 @@
                 A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/android" target="_blank">Irina Blok</a>, também funcionária do <strong>Google</strong>, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
             </p>
 
-            <source media="(max-width: 750px)" srcset="imagens/irina-blok-pq.jpg" type="image/png">
-            <source media="(max-width:1050px)" srcset="imagens/irina-blok.jpg" type="image/png">
-
-            <img src="imagens/irina-blok.jpg" alt='Irina Blok, criadora do mascote "Android".'>
+            <picture>
+            <source media="(max-width: 454px)" srcset="imagens/irina-blok-pq.jpg">
+                
+            <img src="imagens/irina-blok.jpg" alt='Irina Blok, criadora do mascote Android.'>
+            </picture>
             <p>
                 A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.
             </p>
