--- a/Exercícios/10projeto/android.html
+++ b/Exercícios/10projeto/android.html
@@ -30,6 +30,7 @@
 
             <h2>
                 A primeira versão 
+
             </h2>
 
             <p>
@@ -76,9 +77,9 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=OeFpGkICn54VpKbY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             
             <aside>
-                <h1>
+                <h3>
                     Quer aprender mais?
-                </h1> 
+                </h3> 
                 <p>
                     Outro assunto curioso em relação ao <strong>Android</strong> é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.
                 </p>
@@ -120,7 +121,7 @@
     </main>
     <footer>
         <p>
-            Site criado por <strong>Tech Fundation</strong>
+            Site criado por <strong><a href="#">Tech Fundation</a></strong>
         </p>
     </footer>
 </body>
