--- a/Módulo 03/fundo01.html
+++ b/Módulo 03/fundo01.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html lang="pt´br">
+<html lang="pt-br">
 <head>
+
+    <style>
+        body {
+            background-image: url(imagens/wallpaper001.jpg);
+        }
+
+        .quadrado {
+            width:300px;
+            height:300px;
+            border: 1px black solid;
+            margin: 30px;
+            border-radius: 30px;
+            display: inline-block;
+
+            /* O "display:inline-block" deixa um quadrado do lado do outro.*/
+        }
+
+        #k1 {
+            background-color: #992bc8;
+        }
+        #k2 {
+            background-image: linear-gradient(to bottom, rgb(255, 255, 255), rgb(0, 55, 255));
+        }
+        #k3 {
+            background-image: url(imagens/pattern002.png);
+        }
+    </style>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de fundo</title>
-    <link rel="stylesheet" href="style.css">
+   <!-- <link rel="stylesheet" href="style.css">
+-->
 </head>
 <body>
     <div class="quadrado" id="k1">
