--- a/Módulo 03/fundo04.html
+++ b/Módulo 03/fundo04.html
@@ -14,7 +14,8 @@
         background-repeat: no-repeat;
         background-position: center center;
         
-        /* vh significa viewhight. É  a parte branca do site.
+        /* 
+        vh significa viewhight. É  a parte branca do site.
         100vh = 100% da viewhight
         */
     }
