--- a/Módulo 03/teste.html
+++ b/Módulo 03/teste.html
@@ -21,14 +21,18 @@
 
     main {
         background-color: #fff;
-        width: 60%;
+        width: 400px;
         margin: auto;
         padding:auto;
-        border:2px blue dashed;
+        border:5px blue solid;
         border-radius:10px;
         text-align: justify;
         text-decoration: none;
         background-size: 58px;
+    }
+
+    main>h1 {
+        text-align: center;
     }
 </style>
 <body>
