--- a/Módulo 03/fundo06.html
+++ b/Módulo 03/fundo06.html
@@ -25,14 +25,16 @@
     main {
         background-color: white;
         width: 400px;
-       padding: auto;
-       margin: auto;
+        padding: auto;
+        margin: auto;
         border: 5px green solid;
         border-radius: 8px;
         text-align: justify;
-
     }
 
+    main>h1 {
+        text-align: center;
+    }
 
 </style>
 <body>
