--- a/Exercícios/12cordel/index.html
+++ b/Exercícios/12cordel/index.html
@@ -12,7 +12,7 @@
         <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Por Milton Duarte</a>
     </header>
 
-    <section>
+    <section class="normal">
         <pre>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -26,7 +26,7 @@
 
     //---
 
-    <section>
+    <section class="imagem">
         <pre>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -40,7 +40,7 @@
 
     //---
 
-    <section>
+    <section class="normmal">
         <pre>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -63,7 +63,7 @@
 
     //---
 
-    <section>
+    <section class="imagem">
         <pre>
             Tenho saudade das cartas  <br>
             Escritas com a própria mão <br>
@@ -77,7 +77,7 @@
 
     //---
 
-    <section>
+    <section class="normal">
         <pre>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
@@ -97,5 +97,6 @@
             Deixe que Deus interprete.
         </pre>
     </section>
+    <footer><p>Site criado por Lorem.</p></footer>
 </body>
 </html>
