--- a/Exercícios/12cordel/index.html
+++ b/Exercícios/12cordel/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="estilo/style.css">
     <header>
         <h1>Cordel Moderno</h1>
-        <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Por Milton Duarte</a>
+        <p><a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Por Milton Duarte</a></p>
     </header>
 
     <section class="normal">
