--- a/Exercícios/12cordel/index.html
+++ b/Exercícios/12cordel/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <section class="normal">
-        <pre>
+        <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
             Só se fala por e-mail <br>
@@ -21,13 +21,13 @@
             Twitter e Facebook <br>
             Antes que eu caduque <br>
             Vou dizer tudo em poesia.
-        </pre>
+        </p>
     </section>
 
     //---
 
     <section class="imagem">
-        <pre>
+        <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
             "Você" só tem duas letras <br>
@@ -35,13 +35,13 @@
             Para declarar o amor <br>
             Basta botar uma flor <br>
             E um coração desenhado.
-        </pre>
+        </p>
     </section>
 
     //---
 
-    <section class="normmal">
-        <pre>
+    <section class="normal">
+        <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
             Ponto final nem se usa <br>
@@ -49,8 +49,8 @@
             Agora é .com <br>
             Se o saite é muito bom <br>
             Ele vale um alto preço.
-        </pre>
-        <pre>
+        </p>
+        <p>
             Pra piorar a liguagem <br>
             O emoticom é um risco <br>
             Tem símbolo para tudo <br>
@@ -58,13 +58,13 @@
             Um beijo significa <br>
             Pra entender como fica <br>
             Decifre esse rabisco.
-        </pre>
+        </p>
     </section>
 
     //---
 
     <section class="imagem">
-        <pre>
+        <p>
             Tenho saudade das cartas  <br>
             Escritas com a própria mão <br>
             Mandava no mês de Junho <br>
@@ -72,13 +72,13 @@
             Mas matava a saudade <br>
             Era texto de verdade <br>
             Nas linhas do coração.
-        </pre>
+        </p>
     </section>
 
     //---
 
     <section class="normal">
-        <pre>
+        <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
             Mas quando vou prosear <br>
@@ -86,8 +86,8 @@
             Abriu outro aplicativo <br>
             O mundo ficou cativo <br>
             Da tecnologia do agora.
-        </pre>
-        <pre>
+        </p>
+        <p>
             Felizmente, pra orar <br>
             Não precisa de internet <br>
             Deus escuta todo mundo <br>
@@ -95,7 +95,7 @@
             Dois pontos são dois joelhos <br>
             Seus lábios são aparelhos <br>
             Deixe que Deus interprete.
-        </pre>
+        </p>
     </section>
     <footer><p>Site criado por Lorem.</p></footer>
 </body>
