--- a/Exercícios/12cordel/index.html
+++ b/Exercícios/12cordel/index.html
@@ -24,9 +24,7 @@
         </p>
     </section>
 
-    //---
-
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -38,7 +36,6 @@
         </p>
     </section>
 
-    //---
 
     <section class="normal">
         <p>
@@ -61,9 +58,7 @@
         </p>
     </section>
 
-    //---
-
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas  <br>
             Escritas com a própria mão <br>
@@ -74,8 +69,6 @@
             Nas linhas do coração.
         </p>
     </section>
-
-    //---
 
     <section class="normal">
         <p>
@@ -100,3 +93,4 @@
     <footer><p>Site criado por Lorem.</p></footer>
 </body>
 </html>
+
