--- a/Módulo 03/ex022/fundo02.html
+++ b/Módulo 03/ex022/fundo02.html
@@ -19,5 +19,20 @@
 </head>
 <body>
     
+    <!--
+        background-image: url() = escolha às imagens
+
+        background-size: = escolha o tamanho e a resolução das imagens
+    ---------------------------------------------
+        background-repeat: = escolha quantas repetições haverá na imagem
+
+        no-repeat = não ocorre repetições
+
+        repeat-x = repetições deitadas a
+        partir do eixo superior esquerdo
+        
+        repeat-y = repetições deitadas a partir do eixo superior esquerdo
+
+    -->
 </body>
 </html>
