--- a/Módulo 03/ex022/fundo01.html
+++ b/Módulo 03/ex022/fundo01.html
@@ -10,7 +10,7 @@
         .quadrado {
             width:300px;
             height:300px;
-            border: 1px black solid;
+            border: 1px rgb(0, 0, 0) solid;
             margin: 30px;
             border-radius: 30px;
             display: inline-block;
