--- a/parallax-teste/teste/teste.html
+++ b/parallax-teste/teste/teste.html
@@ -6,7 +6,7 @@
     <title>Vou-me embora pra Pasárgada</title>
 </head>
 
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style2.css">
 <body>
     <heder><h1>Vou-me embora pra Pasárgada, de <a href="https://www.culturagenial.com/maiores-poemas-literatura-brasileira/" target="_blank">Manuel Bandeira</a></h1></heder>
 
