--- a/parallax-teste/teste/teste2.html
+++ b/parallax-teste/teste/teste2.html
@@ -32,13 +32,19 @@
     </p>
 </section>
 
-<section class="editado">
+<section class="editado" id="img01">
     <p>
         E como farei ginástica<br>
         Andarei de bicicleta<br>
         Montarei em burro brabo<br>
         Subirei no pau-de-sebo<br>
         Tomarei banhos de mar!<br>
+        
+    </p>
+</section>
+
+<section class="normal">
+    <p>
         E quando estiver cansado<br>
         Deito na beira do rio<br>
         Mando chamar a mãe - d’água.<br>
@@ -47,9 +53,7 @@
         Rosa vinha me contar<br>
         Vou-me embora pra Pasárgada<br>
     </p>
-</section>
 
-<section class="normal">
     <p>
         Em Pasárgada tem tudo<br>
         É outra civilização<br>
@@ -62,7 +66,7 @@
     </p>
 </section>
 
-<section class="editado">
+<section class="editado" id="img02">
     <p>
         E quando eu estiver mais triste<br>
         Mas triste de não ter jeito<br>
