--- a/Módulo 03/ex023/tabela03.html
+++ b/Módulo 03/ex023/tabela03.html
@@ -25,9 +25,9 @@
     <table>
         
             <tr>
-               <td>A</td>
+               <td colspan="2">A</td>
                <td rowspan="3">B</td>
-               <td>C</td>
+               <!--<td>C</td>-->
             </tr>
             <tr>
                 <td rowspan="2">D</td>
