--- a/Modulo 04/ex024/iframe01.html
+++ b/Modulo 04/ex024/iframe01.html
@@ -12,7 +12,7 @@
 
     <p>
          <!--
-        Observe que o IFRAME sem SRC e o FRAMEBORDER fica uma borda em volta;
+        Observe que o IFRAME sem SRC e o FRAMEBORDER deixa uma borda em volta;
         
         com as configurações mencionadas anteriormente, o que fica é um quadro transparente;
         -->
@@ -44,7 +44,7 @@
     </p>
 
         <p>
-            <!--O Site da Google não funcionou porque alguns sites possuiem uma proteção para que seu conteúdo não seja exibido em sites de terceiros.
+            <!-- O Site da Google não funcionou porque alguns sites possuiem uma proteção para que seu conteúdo não seja exibido em sites de terceiros.
             -->
 
             Conheça o site da <iframe src="https://google.com.br" frameborder="0"></iframe>Google Brasil!
