--- a/Modulo 04/ex024/iframe03.html
+++ b/Modulo 04/ex024/iframe03.html
@@ -1,15 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Faça uma escolha</title>
 </head>
+
+<style>
+
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    iframe {
+        width:95vw;
+        height: 390px;
+        border: 1px solid black;
+    }
+
+
+</style>
 <body>
+
+    <h1>Faça uma escolha</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam quo eaque nemo similique iusto voluptate repellendus voluptatem error ratione quod laudantium perspiciatis iste reprehenderit distinctio, odit deserunt libero facilis animi voluptates iure impedit. Ea quod minima, molestias iste ut perferendis magni aliquid iusto at. Nesciunt qui, recusandae rem saepe voluptas, eum consequatur non et ut corporis itaque explicabo consequuntur, facere ipsam tenetur minus dolore. Possimus quasi expedita illum ex amet!</p>
+
+
+    <ul>
+        <li><a href="paginas-extras/pag01.html" target="frame">Escolha 1</a></li>
+
+        <li><a href="paginas-extras/pag02.html" target="frame">Escolha 2</a></li>
+
+        <li><a href="paginas-extras/pag03.html" target="frame">Escolha 3</a></li>
+    </ul>
+
+    <iframe name="frame" srcdoc="<h1>Clique na opção acima!</h1>">
+        <p>Seu navegador não suporta iframe</p>
+    </iframe>
+
+
+        <!--
+        SRCDOC NÃO FUNCIONA!
+        -->
+
 
     <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, eaque delectus? Excepturi, quam error! Tempora ea quasi nesciunt sunt, nam molestiae facere quis maiores dolorum eligendi at omnis reiciendis atque! Dolor voluptates saepe cupiditate tempora nostrum similique maxime accusamus. Natus aperiam voluptatum repellat illum quos atque labore laborum corrupti inventore iusto! Vero ullam ipsum eligendi voluptatem quis dolorem porro in facilis, beatae impedit dicta suscipit omnis sed! Aspernatur, suscipit ullam!
     </p>
+
+
+
+
 </body>
 </html>
