--- a/Modulo 04/projeto-social/index.html
+++ b/Modulo 04/projeto-social/index.html
@@ -21,6 +21,19 @@
 
         <section id="redes-sociais">
 
+            <a href="#" target="tela"> <img src="imagens/logo-home.jpg" alt="home"> </a> <br>
+
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="home"></a> <br>
+
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="home"></a> <br>
+
+            <a href="tela" target="tela"><img src="imagens/logo-instagram.jpg" alt="home"></a> <br>
+
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="home"></a> <br>
+
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="home"></a> <br>
+
+
         </section>
     </main>
 
