--- a/Modulo 04/projeto-social/index.html
+++ b/Modulo 04/projeto-social/index.html
@@ -23,7 +23,7 @@
 
             <a href="#" target="tela"> <img src="imagens/logo-home.jpg" alt="home"> </a> <br>
 
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="home"></a> <br>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="home"></a> <br>
 
             <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="home"></a> <br>
 
