--- a/Modulo 04/projeto-social/facebook.html
+++ b/Modulo 04/projeto-social/facebook.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo/social.css">
 
+    <!--
     <style>
         body {
             background-color: rgb(166, 36, 36);
@@ -39,14 +41,15 @@
             background-color: rgb(213, 113, 113);
             padding: 17px;
         }
-
-
-
     </style>
+-->
+
+
 
     <title>Facebook</title>
 </head>
 <body>
+
     <img src="imagens/tela-facebook.jpg" alt="Facebook">
     <a href="http://facebook.com" target="_blank">Acesse</a>
 
