--- a/Modulo 04/ex025/form007.html
+++ b/Modulo 04/ex025/form007.html
@@ -11,11 +11,11 @@
     <form action="cadastro.php" method="get" autocomplete="on">
 
 <p>
-    <label for="itab">Estado</label>
+    <label for="iest">Estado</label> <!--label ELEMENTO-->
 
-        <select name="estado" id="itab">
+        <select name="estado" id="iest">
 
-            <optgroup label="Região Sudeste">
+            <optgroup label="Região Sudeste"> <!--label ATRIBUTO-->
                 <option value="MG">Minas Gerais</option>
                 <option value="RJ">Rio de Janeiro</option>
                 <option value="SP">São Paulo</option>
