--- a/Modulo 04/ex025/form007.html
+++ b/Modulo 04/ex025/form007.html
@@ -37,7 +37,7 @@
         <datalist id="lstprof">
 
             <option value="ADM">Administrador</option>
-            <option value="DEV">Desenvolvedor</option>
+            <option>Desenvolvedor</option>
             <option value="JRLIST">Jornalista</option>
         
         </datalist>
