--- a/Modulo 04/ex025/form007.html
+++ b/Modulo 04/ex025/form007.html
@@ -48,12 +48,15 @@
     <p>
         <label for="imsg">Mensagem:</label><br>
         <textarea name="msg" id="imsg" cols="30" rows="10" ></textarea>
+
+        <!--
+        cols: colunas
+        rows: linhas
+
+        Quando o textarea for utilizado, o formulário, é recomendado que o mesmo esteja no METHOD = post, devido ao consumo de bytes.
+        -->
     
     </p>
-
-
-
-
 
 
     <input type="submit" value="Enviar">
