--- a/Modulo 04/ex025/form007.html
+++ b/Modulo 04/ex025/form007.html
@@ -53,7 +53,7 @@
         cols: colunas
         rows: linhas
 
-        Quando o textarea for utilizado, o formulário, é recomendado que o mesmo esteja no METHOD = post, devido ao consumo de bytes.
+        Quando o textarea for utilizado o formulário, é recomendado que o mesmo esteja no METHOD = post, devido ao consumo de bytes.
         -->
     
     </p>
