--- a/Modulo 04/ex025/form009.html
+++ b/Modulo 04/ex025/form009.html
@@ -22,5 +22,13 @@
                 <input type="reset" value="Reiniciar">
             </p>
 
+            <!--
+
+            O código abaixo é JavaScript!
+            
+            oninput="ival.innerHTML = Number (inum.value)
+
+            -->
+
 </body>
 </html>
